--- a/Ekls/config.ini
+++ b/Ekls/config.ini
@@ -1,24 +1,16 @@
 [ongoing_activities]
-form = 0
-name = 墨染的钢铁之花
+form = 1
+name = 绊爱联动-前往作战
 
 [shop]
-all = 39050
+all = 54950
 
 [mapid]
-a1 = 30
-a2 = 40
-a3 = 50
-a4 = 60
-b1 = 70
-b2 = 80
-c1 = 90
-c2 = 100
-c3 = 110
-c4 = 120
-d1 = 150
-d2 = 180
+sp1 = 20
+sp2 = 40
+sp3 = 80
+sp4 = 120
 
 [time]
-stoptime = 2019-04-18
+stoptime = 2019-05-09
 
