--- a/Ekls/config.ini
+++ b/Ekls/config.ini
@@ -1,16 +1,24 @@
 [ongoing_activities]
-form = 0
-name = 绊爱联动-前往作战
+form = 1
+name = 铁血、音符&誓言
 
 [shop]
-all = 54950
+all = 49550
 
 [mapid]
-sp1 = 20
-sp2 = 40
-sp3 = 80
-sp4 = 120
+al = 30
+a2 = 40
+a3 = 50
+b1 = 60
+b2 = 70
+b3 = 80
+c1 = 90
+c2 = 100
+c3 = 110
+d1 = 120
+d2 = 150
+d3 = 180
+sp = 800
 
 [time]
-stoptime = 2019-05-16
-
+stoptime = 2019-06-13
