惯例维护，添加P站榜单

--- a/Ekls/config.ini
+++ b/Ekls/config.ini
@@ -1,9 +1,9 @@
 [ongoing_activities]
 form = 1
-name = 铁血、音符&誓言
+name = 光与影的鸢尾之华
 
 [shop]
-all = 49550
+all = 68600
 
 [mapid]
 a1 = 30
@@ -21,4 +21,4 @@ d3 = 180
 sp = 800
 
 [time]
-stoptime = 2019-06-13
+stoptime = 2019-07-11
