--- a/Ekls/config.ini
+++ b/Ekls/config.ini
@@ -1,9 +1,9 @@
 [ongoing_activities]
-form = 0
-name = 光与影的鸢尾之华
+form = 1
+name = 箱庭疗法
 
 [shop]
-all = 68600
+all = 62550
 
 [mapid]
 a1 = 30
@@ -21,5 +21,5 @@ d3 = 180
 sp = 800
 
 [time]
-stoptime = 2019-07-11
+stoptime = 2019-08-15
 
