--- a/Ekls/config.ini
+++ b/Ekls/config.ini
@@ -1,9 +1,9 @@
 [ongoing_activities]
-form = 0
-name = 箱庭疗法
+form = 1
+name = 帝国的荣光
 
 [shop]
-all = 62550
+all = 67550
 
 [mapid]
 a1 = 30
@@ -21,5 +21,5 @@ d3 = 180
 sp = 800
 
 [time]
-stoptime = 2019-08-15
+stoptime = 2019-09-25
 
