--- a/Ekls/config.ini
+++ b/Ekls/config.ini
@@ -1,6 +1,6 @@
 [ongoing_activities]
 form = 1
-name = 帝国的荣光
+name = 测试
 
 [shop]
 all = 67550
@@ -21,5 +21,5 @@ d3 = 180
 sp = 800
 
 [time]
-stoptime = 2019-09-26 10:00
+stoptime = 2019-09-26 13:30
 
