增加限时up池模拟，修正概率

--- a/Ekls/config.ini
+++ b/Ekls/config.ini
@@ -1,25 +1,18 @@
 [ongoing_activities]
 form = 1
-name = 测试
+name = 激奏的Polaris
 
 [shop]
-all = 67550
+all = 58150
 
 [mapid]
-a1 = 30
-a2 = 40
-a3 = 50
-b1 = 60
-b2 = 70
-b3 = 80
-c1 = 90
-c2 = 100
-c3 = 110
-d1 = 120
-d2 = 150
-d3 = 180
+sp1 = 30
+sp2 = 50
+sp3 = 80
+sp4 = 110
+sp5 = 150
 sp = 800
 
 [time]
-stoptime = 2019-09-26 13:30
+stoptime = 2019-11-14 23:59
 
