--- a/Ekls/config.ini
+++ b/Ekls/config.ini
@@ -1,18 +1,18 @@
 [ongoing_activities]
 form = 1
-name = 激奏的Polaris
+name = 虚拟与真实的双向镜
 
 [shop]
-all = 58150
+all = 68350
 
 [mapid]
-sp1 = 30
-sp2 = 50
-sp3 = 80
-sp4 = 110
-sp5 = 150
-sp = 800
+T1 = 30
+T2 = 40
+T3 = 60
+T4 = 90
+T5 = 110
+T6 = 150
+SP = 800
 
 [time]
-stoptime = 2019-11-14 8:59
-
+stoptime = 2019-12-12 0:0
