--- a/Ekls/config.ini
+++ b/Ekls/config.ini
@@ -1,18 +1,25 @@
 [ongoing_activities]
 form = 1
-name = 虚拟与真实的双向镜
+name = 浮樱影华
 
 [shop]
-all = 68350
+all = 114550
 
 [mapid]
-T1 = 30
-T2 = 40
-T3 = 60
-T4 = 90
-T5 = 110
-T6 = 150
-SP = 800
+a1 = 30
+a2 = 40
+a3 = 50
+b1 = 60
+b2 = 70
+b3 = 80
+c1 = 90
+c2 = 100
+c3 = 110
+d1 = 120
+d2 = 150
+d3 = 180
+sp = 800
 
 [time]
-stoptime = 2019-12-12 0:0
+stoptime = 2020-1-9 0:0
+
