--- a/Ekls/config.ini
+++ b/Ekls/config.ini
@@ -1,9 +1,9 @@
 [ongoing_activities]
-form = 0
-name = 浮樱影华
+form = 1
+name = 北境序曲
 
 [shop]
-all = 114550
+all = 118575
 
 [mapid]
 a1 = 30
@@ -21,5 +21,5 @@ d3 = 180
 sp = 800
 
 [time]
-stoptime = 2020-1-9 9:0
+stoptime = 2020-3-12 9:0
 
